# Fiesta

./: .cproject  .gitignore  .gitmodules  .project  ARCHITECTURE.md  CHANGELOG.md  LICENSE  MISRA.md  Makefile  Makefile_template  README.md  adc.h  canDefinitions.h  i2cEeprom.h  main.c  main.h  pwm.h  runalltests.sh  runmefirst.sh  twi_i2c.h  version.h
src/Adjustometer/: .gitignore  Adjustometer.ino  CMakeLists.txt  README.md  config.h  hal_project_config.h  hardwareConfig.h  led.c  led.h  sensors.c  sensors.h  start.c  start.h
src/Adjustometer/scripts/: select-board.sh  upload-uf2.sh
src/Adjustometer/tests/: CMakeLists.txt  sensors_internal_bridge.cpp  test_led.cpp  test_sensors.cpp  test_sensors_internal.cpp
src/Adjustometer/tests/include/: adjustometer_unit_testing.h  hal_project_config.h
src/Clocks/: .gitignore  CMakeLists.txt  Cluster.cpp  Cluster.h  Gauge.h  TFTExtension.cpp  TFTExtension.h  buzzer.cpp  buzzer.h  buzzerStrategy.cpp  buzzerStrategy.h  can.cpp  can.h  config.cpp  config.h  engineFuel.cpp  engineFuel.h  firmware_entry.h  hal_project_config.h  hardwareConfig.h  icons.h  logic.cpp  logic.h  peripherials.cpp  peripherials.h  pressureGauge.cpp  pressureGauge.h  sc_param_handlers_glue.c  simpleGauge.cpp  simpleGauge.h  tempGauge.cpp  tempGauge.h
src/Clocks/.build/: Clocks.ino.uf2  build.options.json  compile_commands.json  compile_commands_patched.json  includes.cache  libraries.cache
src/Clocks/.build/sketch/: Clocks.ino.cpp  Cluster.cpp  Cluster.h  Gauge.h  TFTExtension.cpp  TFTExtension.h  buzzer.cpp  buzzer.h  can.cpp  can.h  config.h  engineFuel.cpp  engineFuel.h  hardwareConfig.h  icons.h  logic.cpp  logic.h  peripherials.cpp  peripherials.h  pressureGauge.cpp  pressureGauge.h  simpleGauge.cpp  simpleGauge.h  tempGauge.cpp  tempGauge.h
src/Clocks/STM32/: CMakeLists.txt  README.md  clocks_hal_app_adapter.cpp
src/Clocks/scripts/: refresh-intellisense.sh  serial-monitor.py  serial-monitor.sh  serial-persistent.py  upload-uf2.sh
src/Clocks/tests/: CMakeLists.txt  test_buzzerStrategy.cpp  test_can.cpp  test_config_session.cpp
src/ECU/: .gitignore  CMakeLists.txt  ECU.ino  EngineController.h  README.md  can.c  can.cpp  can.h  config.c  config.cpp  config.h  dtcManager.c  dtcManager.cpp  dtcManager.h  ecuContext.h  ecu_unit_testing.h  engineFan.c  engineFan.cpp  engineFan.h  engineFuel.c  engineFuel.cpp  engineFuel.h  engineHeater.c  engineHeater.cpp  engineHeater.h  engineMaps.c  engineMaps.h  engineOperation.h  engine_operation.c  engine_operation.h  firmware_entry.h  glowPlugs.c  glowPlugs.cpp  glowPlugs.h  gps.c  gps.cpp  gps.h  hal_project_config.h  hardwareConfig.h  heatedWindshield.c  (+29 more)
src/ECU/misra/: README.md  check_misra.sh  deviation-register.md  suppressions.txt
src/ECU/scripts/: bootstrap.sh  refresh-intellisense.sh  select-board.sh  serial-monitor.py  serial-persistent.py  upload-uf2.sh
src/ECU/scripts/systemd/: README.md  fiesta-bootstrap-run.sh  fiesta-bootstrap.env.example  fiesta-bootstrap.service  fiesta-bootstrap.timer  send-status.py
src/ECU/tests/: CMakeLists.txt  test_adjustometer.cpp  test_can.cpp  test_dtcManager.cpp  test_ecu_params.cpp  test_engineFan.cpp  test_engineFuel.cpp  test_engineHeater.cpp  test_engine_operation.cpp  test_glowPlugs.cpp  test_hal_wrappers.cpp  test_heatedWindshield.cpp  test_obd2.cpp  test_rpm.cpp  test_sc_protocol.cpp  test_sensors_calc.cpp  test_turbo.cpp  test_vp37.cpp
src/ECU/tests/include/: hal_project_config.h
src/ECU/tests/stubs/: arduino-timer.h  ecu_stubs.cpp  hal_project_config.h
src/ECU/tests/testable/: dtcManager_testable.h  ecuParams_testable.h  obd2_testable.h  sensors_testable.h  turbo_testable.h
src/OilAndSpeed/: .gitignore  CMakeLists.txt  can.cpp  can.h  config.cpp  config.h  hal_project_config.h  hardwareConfig.h  oilPressure.cpp  oilPressure.h  periperials.cpp  peripherials.h  sc_param_handlers_glue.c  speed.cpp  speed.h  start.cpp  start.h
src/OilAndSpeed/scripts/: arduino-build.sh  refresh-intellisense.sh  serial-monitor.py  upload-uf2.sh
src/OilAndSpeed/tests/: CMakeLists.txt  test_can.cpp  test_config_session.cpp  test_speed.cpp
src/OilAndSpeed/tests/include/: hal_project_config.h
src/OilAndSpeed/tests/stubs/: hal_project_config.h
src/SerialConfigurator/: .gitignore  CMakeLists.txt  README.md
src/SerialConfigurator/build_ci/: DartConfiguration.tcl  Makefile  serial-configurator  serial-configurator-core-api-tests  serial-configurator-core-tests
src/SerialConfigurator/build_no_crypto/: DartConfiguration.tcl  Makefile  serial-configurator  serial-configurator-cli  serial-configurator-core-api-tests  serial-configurator-core-protocol-tests  serial-configurator-core-tests  serial-configurator-crypto-tests
src/SerialConfigurator/packaging/: serial-configurator.desktop
src/SerialConfigurator/scripts/: desktop-build.sh  refresh-intellisense.sh
src/SerialConfigurator/src/: config.h
src/SerialConfigurator/src/cli/: sc_cli_commands.c  sc_cli_commands.h  sc_cli_main.c  sc_cli_output.c  sc_cli_output.h  sc_cli_selectors.c  sc_cli_selectors.h
src/SerialConfigurator/src/core/: sc_auth.c  sc_auth.h  sc_core.c  sc_core.h  sc_crypto.h  sc_crypto_jaszczurhal.cpp  sc_crypto_none.c  sc_flash.c  sc_flash.h  sc_frame.c  sc_frame.h  sc_gps.c  sc_gps.h  sc_manifest.c  sc_manifest.h  sc_sha256.c  sc_transport.c  sc_transport.h
src/SerialConfigurator/src/ui/: main.c  sc_app.c  sc_app.h  sc_detection.c  sc_detection.h  sc_flash_paths.c  sc_flash_paths.h  sc_flash_tab.c  sc_flash_tab.h  sc_generic_gfx_helper.c  sc_generic_gfx_helper.h  sc_i18n.c  sc_i18n.h  sc_map_tab.c  sc_map_tab.h  sc_module_details.c  (+8 more)
src/SerialConfigurator/tests/: test_sc_auth.c  test_sc_core_api_contract.c  test_sc_core_protocol_readonly.c  test_sc_core_smoke.c  test_sc_crypto_bridge.c  test_sc_flash.c  test_sc_flash_bootsel.c  test_sc_flash_copy_reenum.c  test_sc_flash_orchestrator.c  test_sc_flash_paths.c  test_sc_frame.c  test_sc_gps.c  test_sc_i18n.c  test_sc_manifest.c  test_sc_param.c  test_sc_phase5.c  test_sc_phase8_host.c  test_sc_progressbar.c  valgrind-legacy.supp  valgrind.supp
(+422 files in other folders)
